Fix play button position on IE11

--- a/skin/sass/skin.sass
+++ b/skin/sass/skin.sass
@@ -182,6 +182,7 @@
     left: 40%
     left: calc(50% - 3em)
     width: 6em
+    height: 6em
     opacity: 0
     transform: scale(.8)
     transition: all .2s
